--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.12.0
   firebase_auth: ^4.6.0
+  google_fonts: ^4.0.4
+  line_awesome_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
