--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
 dependencies:
+  get:
   flutter:
     sdk: flutter
 
@@ -39,6 +41,8 @@ dependencies:
   firebase_auth: ^4.6.0
   google_fonts: ^4.0.4
   line_awesome_flutter: ^2.0.0
+  image_picker: ^0.8.7+5
+  cloud_firestore: ^4.7.0
 
 dev_dependencies:
   flutter_test:
