--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,7 +52,9 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+          multiDexEnabled = true
     }
+
 
     buildTypes {
         release {
@@ -71,4 +73,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation("androidx.multidex:multidex:2.0.1")
 }
